--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,10 @@
 </head>
 
 <body>
+    <div class="switch">
+        <h2 class="text">当前分析依赖：开发依赖</h2>
+        <button class="switch-btn">切换视图</button>
+    </div>
     <div class="layout">
         <div id="main" style="width: 100%; height: 100%"></div>
     </div>
@@ -106,6 +110,32 @@
     #multipleVersion p {
         width: 100%;
         margin-top: 5px;
+    }
+    .switch {
+        position: absolute;
+        top: 12vh;
+        right: 2vw;
+        z-index: 1000;
+        text-align: center;
+    }
+    .switch-btn {
+      display: inline-block;
+      padding: 8px 16px;
+      margin: 30px 0;
+      font-size: 18px;
+      font-weight: bold;
+      text-align: center;
+      text-decoration: none;
+      border-radius: 8px;
+      background-color: #3399CC;
+      color: #fff;
+      border: none;
+      box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.3);
+      transition: background-color 0.3s ease;
+      cursor: pointer;
+    }
+    .switch-btn:hover {
+      background-color: #66CCFF;
     }
 </style>
 <!-- 渲染依赖关系图 -->
